# django-user-defined-fields

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
example/: Pipfile  requirements.txt
example/example/: settings.py  urls.py
example/testapp/: forms.py  models.py  settings.py  tests.py  urls.py  views.py
example/testapp/migrations/: 0001_initial.py
example/testapp/templates/testapp/: base.html
userdefinedfields/: README.md  __init__.py  admin.py  context_processors.py  factories.py  fields.py  forms.py  models.py  widgets.py
userdefinedfields/contrib/: django_filters.py
userdefinedfields/migrations/: 0001_initial.py  0002_auto_20180724_1534.py  0002_auto_20200923_0122.py  0003_auto_20201120_0209.py  0004_alter_extrafield_widget.py  0005_auto_20240809_choices.py
