[metadata]
name = django-user-defined-fields
version = 0.0.7
description = A Django app for user defined fields
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/uptick/django-user-defined-fields
author = Aidan Lister
author_email = aidan@uptickhq.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

[flake8]
ignore = E501
max-line-length = 100

[isort]
known_django = django
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_standard_library = six,tablib,yaml
known_first_party = userdefinedfields
multi_line_output = 3
line_length = 100
indent = 4
